--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,17 @@
         android:roundIcon="@drawable/purple"
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalProjectAndroid1">
-        <activity android:name=".ArcadePong"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+        <activity android:name=".MainActivity"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".ArcadePong"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:screenOrientation="landscape">
+        </activity>
     </application>
 
 </manifest>
