--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:roundIcon="@drawable/purple"
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalProjectAndroid1">
-        <activity android:name=".MainActivity"
-            android:screenOrientation="landscape">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
