game working updated 15 Return to main activity from score board

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".Score"
-            android:label="finish screen">
+            android:label="finish screen"
+            android:screenOrientation="portrait">
         </activity>
 
 
